recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: not found: value lenght
		spiral(steps=steps-1,90,lenght=lenght+3,3)
                                        ^